fix get backlogs projections